Search map integirtion using google api key

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
     <span class="text-secondary text-xs leading-[18px] font-Barlow uppercase font-bold">Groups</span>
 </div>
 <span class="flex justify-between  w-[1252px] h-[40px] py-1.5 px-5 bg-inputBg">
-    <input type="text" placeholder="Search" class="bg-inherit border-0 outline-0 w-full text-secondary" />
+    <input #searchInput type="text" placeholder="Search" class="bg-inherit placeholder:!text-secondaryText border-0 outline-0 w-full !text-secondaryText" />
     <img height="14px" width="14px" src="assets/svg-icons/search-icon.svg" alt="" />
 </span>
 <span class="flex items-center justify-center w-[60px] h-[40px] border-r-0 border-l- border-y-0 border-secondary cursor-pointer">
