--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
-<div class="flex justify-between gap-[250px]">
+<div class="flex justify-between items-end gap-[250px]">
   <div class="w-[470px] flex h-[50px] bg-primaryBg rounded-[5px] shadow-custom-black">
-    <div class="border-r border-custom-border w-[70px]">
+    <div class="border-r border-custom-border w-[70px] px-[15px]">
 
       <ul *ngIf="isDropdownOpen" class="absolute w-[70px] h-[100px] rounded-[5px] bg-primaryBg -top-[110px]">
         <li *ngFor="let option of options" (click)="selectOption(option)"
@@ -9,9 +9,9 @@
               alt="{{ option.label }}" /></span>
         </li>
       </ul>
-      <div class="w-[70px] h-[50px] cursor-pointer" (click)="toggleDropdown()">
+      <div class="h-[50px] cursor-pointer" (click)="toggleDropdown()">
         <div class=" w-full gap-2 items-center flex  h-full">
-          <img class="" [src]="selectedOption.image" alt="{{ selectedOption.label }}" />
+          <img class="w-[16px] h-[16px]" [src]="selectedOption.image" alt="{{ selectedOption.label }}" />
           <span>
             <svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -24,8 +24,8 @@
       </div>
 
     </div>
-    <div class=" w-[329px] gap-3 items-center px-2 flex border-r border-custom-border h-full" (click)="openDateDailog()">
-      <div class="flex gap-3 w-[300px] text-secondaryText text-xs font-bold" >
+    <div class=" w-[329px] gap-[15px] items-center px-[15px] flex border-r border-custom-border h-full" (click)="openDateDailog()">
+      <div class="flex gap-[15px] w-[300px] text-secondaryText text-xs font-bold" >
         <div class="felx gap-1 text-secondaryText text-xs font-bold" *ngIf="startDate">{{getFormattedDate(startDate) }}</div>
         -
         <div class="felx gap-1 text-secondaryText text-xs font-bold" *ngIf="endDate">{{getFormattedDate(endDate)}}</div>
@@ -39,7 +39,7 @@
 
       </span>
     </div>
-    <div class="flex items-center gap-3 w-[70px] h-[50px]">
+    <div class="flex items-center px-[15px] gap-3 w-[70px] h-[50px]">
       <span>
         <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -58,8 +58,8 @@
       </span>
     </div>
   </div>
-  <div class="w-[545px] flex h-[50px] bg-primaryBg rounded-[5px] shadow-custom-black">
-    <div class=" px-2 w-[329px] gap-3 items-center flex border-r border-custom-border h-full">
+  <div class="w-[545px] flex h-[35px] bg-primaryBg rounded-[5px] shadow-custom-black">
+    <div class=" px-[10px] w-[329px] gap-[10px] items-center flex border-r border-custom-border h-full">
       <div class="flex gap-3 w-[300px] items-center">
         <div class="flex gap-2 items-center">
           <div class="flex gap-1 z-30 relative font-semibold text-xs leading-[14.4px]"><span
@@ -79,7 +79,7 @@
       </div>
       <div class="felx gap-1"></div>
     </div>
-    <div class="flex items-center justify-center border-r border-custom-border gap-3 w-[35px] h-[50px]" (click)="zoomMap('zoomOut')">
+    <div class="flex items-center justify-center border-r border-custom-border gap-[10px] w-[35px] h-[35px]" (click)="zoomMap('zoomOut')">
       <span>
         <svg width="13" height="3" viewBox="0 0 13 3" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M11.5 1.5H1.5" stroke="#4A5863" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -87,7 +87,7 @@
 
       </span>
     </div>
-    <div class="flex items-center justify-center pl-2 gap-1 w-[107px] h-[50px] border-r border-custom-border">
+    <div class="flex items-center justify-center px-[10px] gap-[10px] w-[120px] h-[35px] border-r border-custom-border">
       <span class="text-secondary-heiglight ">
         {{zoomLevel}}
       </span>
@@ -95,7 +95,7 @@
         <input matSliderThumb [(value)]="zoomLevel">
       </mat-slider>
     </div>
-    <div class="flex items-center justify-center gap-3 w-[35px] h-[50px] border-r border-custom-border" (click)="zoomMap('zoomIn')">
+    <div class="flex items-center justify-center gap-3 w-[35px] h-[35px] border-r border-custom-border" (click)="zoomMap('zoomIn')">
       <span>
         <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M11.5 6.5H1.5M6.5 1.5V11.5" stroke="#ABB7C0" stroke-width="2" stroke-linecap="round"
@@ -105,7 +105,7 @@
 
       </span>
     </div>
-    <div class="flex items-center justify-center gap-3 w-[35px] h-[50px]">
+    <div class="flex items-center justify-center gap-3 w-[35px] h-[35px]">
       <span>
         <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
