--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
+<loading-bar></loading-bar>
+
 <div class="flex bg-primaryBg w-lvw">
 <span  class="flex items-center justify-center min-w-[60px] h-[40px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
      <img src="assets/svg-icons/menu-icon.svg" alt=""/>
